Fix wrong placeholder image scaling on firefox

--- a/resources/assets/scss/components/_card.scss
+++ b/resources/assets/scss/components/_card.scss
@@ -28,6 +28,11 @@
       }
     }
 
+    .poster__placeholder img {
+      height: 80px;
+      opacity: .6;
+    }
+
     .card__body {
       display: flex;
       height: 231px;
